syntax="proto3";

package proto;
import "grpc/proto/entry.proto";
import "google/protobuf/any.proto";
option go_package = "./grpc/proto;proto";

//事件类型
enum EventType {
    HEARTBEAT = 0;
    CONFIRM_LEADER = 1;
    SOLICIT_VOTE = 2;
    GRANT_VOTE = 3;
    REPLICATE_ENTRIES = 4;
    ACCEPT_ENTRIES = 5;
    REJECT_ENTRIES = 6;
    CLIENT_REQUEST = 7;
    CLIENT_RESPONSE = 8;
}

message HeartbeatEvent {
    uint64 commit_index = 1;
    uint64 commit_term = 2;
}

message ConfirmleaderEvent {
    uint64 commit_index = 1;
    bool has_committed = 2;
}

message SolicitVoteEvent {
    uint64 last_index = 1;
    uint64 last_term = 2;
}

message GrantVoteEvent {}

message ReplicateEntriesEvent {
    uint64 base_index = 1;
    uint64 base_term = 2;
    repeated Entry entries = 3;
}

message RejectEntriesEvent {}

message AcceptEntriesEvent {
    uint64 last_index = 1;
}

//请求类型
enum ReqType {
    REQ_QUERY = 0;
    REQ_MUTATE = 1;
    REQ_STATUS = 2;
}

message ClientRequestEvent {
    string id = 1;
    ReqType request_type = 2;
    bytes command = 3;
}

//回复类型
enum RespType {
    RESP_STATUS = 0;
    RESP_STATE = 1;
    RESP_ABORT = 2;
}

message Status {
    string server = 1;
    string leader = 2;
    uint64 term = 3;
    uint64 commit_index = 4;
    uint64 apply_index = 5;
    string storage = 6;
    uint64 storage_size = 7;
    map<string, uint64> node_last_index = 8;
}

message State {
    bytes result = 1;
}

message Abort {
    string reason = 1;
}

message ClientResponseEvent {
    string id = 1;
    RespType response_type = 2;
    google.protobuf.Any content = 3; // status, state, abort
}