syntax="proto3";

package proto;
import "google/protobuf/any.proto";
option go_package = "proto/";

enum AddrType {
    PEERS = 0;
    PEER = 1;
    LOCAL = 2;
    CLIENT = 3;
}

message Address {
    AddrType addrType = 1;
    string peer = 2;
}

message Message {
    uint64 term = 1;
    Address from = 2;
    Address to = 3;
    google.protobuf.Any event = 4;
}
